--- a/assets/partials/contact.html
+++ b/assets/partials/contact.html
@@ -2,7 +2,7 @@
           <button class="btn btn-info btn-lg"><span class="glyphicon glyphicon-earphone"> Contacts</span></button>
           <ul class="list-unstyle">
             <li class="col-lg-2 col-lg-offset-1 contacts"><a href="mailto:wilfried.nguessan.bobo@gmail.com?subject=feedback "><img src="assets/images/email.ico" alt="email" height="40" width="40"></a></li>
-            <li class="col-lg-2 contacts"><a href="https://github.com/WilfriedBobo" target="_blank"><img src="assets/images/github.ico" alt="github" height="40" width="40"></a></li>
+            <li class="col-lg-2 contacts"><a href="https://wilfriednguessanbobo.github.io/" target="_blank"><img src="assets/images/github.ico" alt="github" height="40" width="40"></a></li>
             <li class="col-lg-2 contacts"><a href="https://www.linkedin.com/in/wilfried-bobo-769683138/" target="_blank"><img src="assets/images/linkedin.ico" alt="linkedin" height="40" width="40"></a></li>
             <li class="col-lg-2 contacts"><a href="https://twitter.com/Wilfried_Bobo" target="_blank"><img src="assets/images/twitter.ico" alt="twitter" height="40" width="40"></a></li>
             <li class="col-lg-2 contacts col-lg-offset-1"><a href="https://soundcloud.com/marshaks" target="_blank"><img src="assets/images/soundcloud.ico" alt="soundcloud" height="40" width="40"></a></li>
