--- a/assets/partials/competence.html
+++ b/assets/partials/competence.html
@@ -8,14 +8,14 @@
                   <li><h5>WINDOWS</h5><br>
                     <div class="progress">
                       <div class="progress-bar progress-bar-striped active" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 60%">
-                        <span class="sr-only">60% Complete</span>
+                        <span class="">60%</span>
                       </div>
                     </div>
                   </li>
                   <li><h5>LINUX</h5><br>
                     <div class="progress">
                       <div class="progress-bar progress-bar-striped active" role="progressbar" aria-valuenow="10" aria-valuemin="0" aria-valuemax="100" style="width: 10%">
-                        <span class="sr-only">10% Complete</span>
+                        <span class="">10%</span>
                       </div>
                     </div>
                   </li>
@@ -30,49 +30,49 @@
                   <li><h5>HTML</h5><br>
                     <div class="progress">
                       <div class="progress-bar progress-bar-striped active" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 60%">
-                        <span class="sr-only">60% Complete</span>
+                        <span class="">60%</span>
                       </div>
                     </div>
                   </li>
                   <li><h5>CSS</h5><br>
                     <div class="progress">
                       <div class="progress-bar progress-bar-striped active" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 60%">
-                        <span class="sr-only">60% Complete</span>
+                        <span class="">60%</span>
                       </div>
                     </div>
                   </li>
                   <li><h5>JAVASCRIPT</h5><br>
                     <div class="progress">
                       <div class="progress-bar progress-bar-striped active" role="progressbar" aria-valuenow="10" aria-valuemin="0" aria-valuemax="100" style="width: 10%">
-                        <span class="sr-only">10% Complete</span>
+                        <span class="">10%</span>
                       </div>
                     </div>
                   </li>
                   <li><h5>JAVA</h5> <br>
                     <div class="progress">
                       <div class="progress-bar progress-bar-striped active" role="progressbar" aria-valuenow="1" aria-valuemin="0" aria-valuemax="100" style="width: 1%">
-                        <span class="sr-only">1% Complete</span>
+                        <span class="">1%</span>
                       </div>
                     </div>
                   </li>
                   <li><h5>PHP</h5> <br>
                     <div class="progress">
                       <div class="progress-bar progress-bar-striped active" role="progressbar" aria-valuenow="10" aria-valuemin="0" aria-valuemax="100" style="width: 10%">
-                        <span class="sr-only">10% Complete</span>
+                        <span class="">10%</span>
                       </div>
                     </div>
                   </li>
                   <li><h5>PYTHON</h5><br>
                     <div class="progress">
                       <div class="progress-bar progress-bar-striped active" role="progressbar" aria-valuenow="1" aria-valuemin="0" aria-valuemax="100" style="width: 1%">
-                        <span class="sr-only">1% Complete</span>
+                        <span class="">1%</span>
                       </div>
                     </div>
                   </li>
                   <li><h5>RUBY</h5> <br>
                     <div class="progress">
                       <div class="progress-bar progress-bar-striped active" role="progressbar" aria-valuenow="1" aria-valuemin="0" aria-valuemax="100" style="width: 1%">
-                        <span class="sr-only">1% Complete</span>
+                        <span class="">1%</span>
                       </div>
                     </div>
                   </li>
@@ -93,91 +93,91 @@
                 <li><h5 class="">LIGNE DE COMMANDE</h5><br>
                   <div class="progress">
                     <div class="progress-bar progress-bar-striped active" role="progressbar" aria-valuenow="30" aria-valuemin="0" aria-valuemax="100" style="width: 30%">
-                      <span class="sr-only">30% Complete</span>
+                      <span class="">30%</span>
                     </div>
                   </div>
                 </li>
                 <li><h5>NANO</h5><br>
                   <div class="progress">
                     <div class="progress-bar progress-bar-striped active" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="width: 80%">
-                      <span class="sr-only">80% Complete</span>
+                      <span class="">80%</span>
                     </div>
                   </div>
                 </li>
                 <li><h5>NOTEPAD ++</h5><br>
                   <div class="progress">
                     <div class="progress-bar progress-bar-striped active" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 60%">
-                      <span class="sr-only">60% Complete</span>
+                      <span class="">60%</span>
                     </div>
                   </div>
                 </li>
                 <li><h5>ATOM</h5><br>
                   <div class="progress">
                     <div class="progress-bar progress-bar-striped active" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 60%">
-                      <span class="sr-only">60% Complete</span>
+                      <span class="">60%</span>
                     </div>
                   </div>
                 </li>
                 <li><h5>NETBEANS</h5><br>
                   <div class="progress">
                     <div class="progress-bar progress-bar-striped active" role="progressbar" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100" style="width: 40%">
-                      <span class="sr-only">40% Complete</span>
+                      <span class="">40%</span>
                     </div>
                   </div>
                 </li>
                 <li><h5>GIT</h5><br>
                   <div class="progress">
                     <div class="progress-bar progress-bar-striped active" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 60%">
-                      <span class="sr-only">60% Complete</span>
+                      <span class="">60%</span>
                     </div>
                   </div>
                 </li>
                 <li><h5>GITHUB</h5><br>
                   <div class="progress">
                     <div class="progress-bar progress-bar-striped active" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 60%">
-                      <span class="sr-only">60% Complete</span>
+                      <span class="">60%</span>
                     </div>
                   </div>
                 </li>
                 <li><h5>LAMP/WAMP/XAMP</h5><br>
                   <div class="progress">
                     <div class="progress-bar progress-bar-striped active" role="progressbar" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100" style="width: 20%">
-                      <span class="sr-only">20% Complete</span>
+                      <span class="">20%</span>
                     </div>
                   </div>
                 </li>
                 <li><h5>NODE JS</h5><br>
                   <div class="progress">
-                    <div class="progress-bar progress-bar-striped active" role="progressbar" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100" style="width: 0%">
-                      <span class="sr-only">0% Complete</span>
+                    <div class="progress-bar progress-bar-striped active" role="progressbar" aria-valuenow="10" aria-valuemin="0" aria-valuemax="100" style="width: 10%">
+                      <span class="">10%</span>
                     </div>
                   </div>
                 </li>
                 <li><h5>PENCIL</h5><br>
                   <div class="progress">
                     <div class="progress-bar progress-bar-striped active" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100" style="width: 70%">
-                      <span class="sr-only">70% Complete</span>
+                      <span class="">70%</span>
                     </div>
                   </div>
                 </li>
                 <li><h5>MASCHINE 2</h5><br>
                   <div class="progress">
                     <div class="progress-bar progress-bar-striped active" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 60%">
-                      <span class="sr-only">60% Complete</span>
+                      <span class="">60%</span>
                     </div>
                   </div>
                 </li>
                 <li><h5>LOGIC PRO X</h5><br>
                   <div class="progress">
                     <div class="progress-bar progress-bar-striped active" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 60%">
-                      <span class="sr-only">60% Complete</span>
+                      <span class="">60%</span>
                     </div>
                   </div>
                 </li>
                 <li><h5>GESTIONNAIRE DE DEPENDANCE</h5><br>
                   <div class="progress">
                     <div class="progress-bar progress-bar-striped active" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 60%">
-                      <span class="sr-only">60% Complete</span>
+                      <span class="">60%</span>
                     </div>
                   </div>
                 </li>
@@ -198,28 +198,28 @@
                 <li><h5>SYMFONY</h5><br>
                   <div class="progress">
                     <div class="progress-bar progress-bar-striped active" role="progressbar" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100" style="width: 0%">
-                      <span class="sr-only">0% Complete</span>
+                      <span class="">0%</span>
                     </div>
                   </div>
                 </li>
                 <li><h5>JQUERY/ JQUERY UI</h5><br>
                   <div class="progress">
                     <div class="progress-bar progress-bar-striped active" role="progressbar" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100" style="width: 20%">
-                      <span class="sr-only">20% Complete</span>
+                      <span class="">20%</span>
                     </div>
                   </div>
                 </li>
                 <li><h5>ANGULAR JS</h5><br>
                   <div class="progress">
                     <div class="progress-bar progress-bar-striped active" role="progressbar" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100" style="width: 20%">
-                      <span class="sr-only">20% Complete</span>
+                      <span class="">20%</span>
                     </div>
                   </div>
                 </li>
                 <li><h5>BOOTSTRAP</h5><br>
                   <div class="progress">
                     <div class="progress-bar progress-bar-striped active" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100" style="width: 70%">
-                      <span class="sr-only">70% Complete</span>
+                      <span class="">70%</span>
                     </div>
                   </div>
                 </li>
@@ -233,14 +233,14 @@
                 <li><h5>LARAVEL</h5><br>
                   <div class="progress">
                     <div class="progress-bar progress-bar-striped active" role="progressbar" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100" style="width: 0%">
-                      <span class="sr-only">0% Complete</span>
+                      <span class="">0%</span>
                     </div>
                   </div>
                 </li>
                 <li><h5>DJANGO</h5><br>
                   <div class="progress">
                     <div class="progress-bar progress-bar-striped active" role="progressbar" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100" style="width: 0%">
-                      <span class="sr-only">0% Complete</span>
+                      <span class="">0%</span>
                     </div>
                   </div>
                 </li>
