--- a/assets/partials/experience.html
+++ b/assets/partials/experience.html
@@ -1,5 +1,5 @@
-<div id="monxp" class="col-lg-2 col-md-2 col-sm-2 col-xs-2 content_experience contenant">
-          <audio id="troll" src="assets/sound/troll.mp3"></audio>
+<div id="monxp" class="col-lg-12 col-md-2 col-sm-2 col-xs-2 content_experience contenant">
+          <!--<audio id="troll" src="assets/sound/troll.mp3"></audio>-->
           <button class="btn btn-danger btn-lg danger" onclick="play('troll')" ><span class="glyphicon glyphicon-ban-circle"> Experiences</span></button><br>
           <h3>Diplome / Certification</h3>
           <ul>
@@ -21,5 +21,5 @@
             <li><h4>Projet de Groupe : </h4>Creation de site e-commerce</li>
             <hr>
           </ul>
-          <img id="cheval" class="faa-passing animated" src="assets/images/cheval.gif" alt="cheval" onclick="pause('troll')" title="Cliquez sur l'image pour arrêter la musique et sur la touche noir pour reduire" ondblclick="play('troll')">
+          <!--<img id="cheval" class="faa-passing animated" src="assets/images/cheval.gif" alt="cheval" onclick="pause('troll')" title="Cliquez sur l'image pour arrêter la musique et sur la touche noir pour reduire" ondblclick="play('troll')">-->
         </div>
