--- a/assets/partials/competence.html
+++ b/assets/partials/competence.html
@@ -12,10 +12,17 @@
                       </div>
                     </div>
                   </li>
+                  <li><h5>MAC OS</h5><br>
+                    <div class="progress">
+                      <div class="progress-bar progress-bar-striped active" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 60%">
+                        <span class="">60%</span>
+                      </div>
+                    </div>
+                  </li>
                   <li><h5>LINUX</h5><br>
                     <div class="progress">
-                      <div class="progress-bar progress-bar-striped active" role="progressbar" aria-valuenow="10" aria-valuemin="0" aria-valuemax="100" style="width: 10%">
-                        <span class="">10%</span>
+                      <div class="progress-bar progress-bar-striped active" role="progressbar" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100" style="width: 50%">
+                        <span class="">50%</span>
                       </div>
                     </div>
                   </li>
@@ -43,15 +50,15 @@
                   </li>
                   <li><h5>JAVASCRIPT</h5><br>
                     <div class="progress">
-                      <div class="progress-bar progress-bar-striped active" role="progressbar" aria-valuenow="10" aria-valuemin="0" aria-valuemax="100" style="width: 10%">
-                        <span class="">10%</span>
+                      <div class="progress-bar progress-bar-striped active" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 60%">
+                        <span class="">60%</span>
                       </div>
                     </div>
                   </li>
                   <li><h5>JAVA</h5> <br>
                     <div class="progress">
-                      <div class="progress-bar progress-bar-striped active" role="progressbar" aria-valuenow="1" aria-valuemin="0" aria-valuemax="100" style="width: 1%">
-                        <span class="">1%</span>
+                      <div class="progress-bar progress-bar-striped active" role="progressbar" aria-valuenow="5" aria-valuemin="0" aria-valuemax="100" style="width: 5%">
+                        <span class="">5%</span>
                       </div>
                     </div>
                   </li>
@@ -204,15 +211,15 @@
                 </li>
                 <li><h5>JQUERY/ JQUERY UI</h5><br>
                   <div class="progress">
-                    <div class="progress-bar progress-bar-striped active" role="progressbar" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100" style="width: 20%">
-                      <span class="">20%</span>
+                    <div class="progress-bar progress-bar-striped active" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 60%">
+                      <span class="">60%</span>
                     </div>
                   </div>
                 </li>
                 <li><h5>ANGULAR JS</h5><br>
                   <div class="progress">
-                    <div class="progress-bar progress-bar-striped active" role="progressbar" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100" style="width: 20%">
-                      <span class="">20%</span>
+                    <div class="progress-bar progress-bar-striped active" role="progressbar" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100" style="width: 50%">
+                      <span class="">50%</span>
                     </div>
                   </div>
                 </li>
