--- a/assets/partials/competence.html
+++ b/assets/partials/competence.html
@@ -1,5 +1,5 @@
 <div  class="col-lg-2 col-md-2 col-sm-2 col-xs-2 content_competence contenant">
-          <button class="btn btn-success btn-lg"><span class="glyphicon glyphicon-road"> Competences</span></button>
+          <button class="btn btn-success btn-lg"><span class="glyphicon glyphicon-road"> Compétences</span></button>
           <ul id="mescomp" class="list-unstyled">
             <li class="col-lg-3 col-md-3 col-sm-6 col-xs-12 competence">
               <section>
