--- a/assets/partials/experience.html
+++ b/assets/partials/experience.html
@@ -1,6 +1,6 @@
 <div id="monxp" class="col-lg-12 col-md-2 col-sm-2 col-xs-2 content_experience contenant">
           <!--<audio id="troll" src="assets/sound/troll.mp3"></audio>-->
-          <button class="btn btn-danger btn-lg danger" onclick="play('troll')" ><span class="glyphicon glyphicon-ban-circle"> Experiences</span></button><br>
+          <button class="btn btn-danger btn-lg danger" onclick="play('troll')" ><span class="glyphicon glyphicon-ban-circle"> Expériences</span></button><br>
           <h3>Diplome / Certification</h3>
           <ul>
             <li><i class="fa fa-spinner faa-spin animated"></i> 2017: Préparation du Titre Pro : Développeur Logiciel à E2N - Titre de Niveau III / équivalent bac +2
