--- a/assets/partials/presentation.html
+++ b/assets/partials/presentation.html
@@ -1,5 +1,5 @@
 <div class="col-lg-2 col-md-2 col-sm-2 col-xs-2 content_present contenant" >
-          <button class="btn btn-primary btn-lg"><span class="glyphicon glyphicon-user"> Presentation</span></button>
+          <button class="btn btn-primary btn-lg"><span class="glyphicon glyphicon-user"> Présentation</span></button>
           <p id="moi">Je m'appelle Bobo N'Guessan Wilfried. j'ai 24ans et je réside actuellement à Noyon en Picardie.<br> Je suis actuellement en formation à l'ecole E2N afin d'acquerir les qualités nécessaire aux métiers d'Intégrateur web et de Developpeur full Stack.</p>
           <hr>
           <hr>
