--- a/assets/partials/loisirs.html
+++ b/assets/partials/loisirs.html
@@ -27,7 +27,7 @@
             </li>
             <li class="col-lg-2 col-xs-12 loisir" ><img src="assets/images/serie.ico" alt="Serie" title="Serie" height="40px" width="40px"><br>
               <ul>
-                <li class="col-lg-12 col-xs-12"><h4>Game of Throne</h4><br>Winter is coming</li>
+                <li class="col-lg-12 col-xs-12"><h4>Game of Thrones</h4><br>Winter is coming</li>
                 <li class="col-lg-12 col-xs-12"><h4>Justified</h4>A man who speaks out of both sides of his mouth deserves to have it permanently shut</li>
                 <li class="col-lg-12 col-xs-12"><h4>WestWorld</h4>They come back because of the subtleties, the details. They come back because they discover something they imagine no one had ever noticed before. They're not looking for a story that tells them who they are. The already know who they are. They're here because they want a glimpse of who they could be</li>
 
