--- a/assets/partials/competence.html
+++ b/assets/partials/competence.html
@@ -1,7 +1,7 @@
 <div  class="col-lg-2 col-md-2 col-sm-2 col-xs-2 content_competence contenant">
           <button class="btn btn-success btn-lg"><span class="glyphicon glyphicon-road"> Compétences</span></button>
           <ul id="mescomp" class="list-unstyled">
-            <li class="col-lg-3 col-md-3 col-sm-6 col-xs-12 competence">
+            <li class="col-lg-4 col-md-4 col-sm-6 col-xs-12 competence">
               <section>
                 <h3>Système d'Exploitation</h3>
                 <ul>
@@ -30,7 +30,7 @@
                 </ul>
               </section>
             </li>
-            <li class="col-lg-3 col-md-3 col-sm-6 col-xs-12 competence">
+            <li class="col-lg-4 col-md-4 col-sm-6 col-xs-12 competence">
               <section>
                 <h3>Langages</h3>
                 <ul>
@@ -93,112 +93,7 @@
                 </ul>
               </section>
           </li>
-          <li class="col-lg-3 col-md-3 col-sm-6 col-xs-12 competence">
-            <section>
-              <h3>Logiciels et Outils</h3>
-              <ul>
-                <li><h5 class="">LIGNE DE COMMANDE</h5><br>
-                  <div class="progress">
-                    <div class="progress-bar progress-bar-striped active" role="progressbar" aria-valuenow="30" aria-valuemin="0" aria-valuemax="100" style="width: 30%">
-                      <span class="">30%</span>
-                    </div>
-                  </div>
-                </li>
-                <li><h5>NANO</h5><br>
-                  <div class="progress">
-                    <div class="progress-bar progress-bar-striped active" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="width: 80%">
-                      <span class="">80%</span>
-                    </div>
-                  </div>
-                </li>
-                <li><h5>NOTEPAD ++</h5><br>
-                  <div class="progress">
-                    <div class="progress-bar progress-bar-striped active" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 60%">
-                      <span class="">60%</span>
-                    </div>
-                  </div>
-                </li>
-                <li><h5>ATOM</h5><br>
-                  <div class="progress">
-                    <div class="progress-bar progress-bar-striped active" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 60%">
-                      <span class="">60%</span>
-                    </div>
-                  </div>
-                </li>
-                <li><h5>NETBEANS</h5><br>
-                  <div class="progress">
-                    <div class="progress-bar progress-bar-striped active" role="progressbar" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100" style="width: 40%">
-                      <span class="">40%</span>
-                    </div>
-                  </div>
-                </li>
-                <li><h5>GIT</h5><br>
-                  <div class="progress">
-                    <div class="progress-bar progress-bar-striped active" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 60%">
-                      <span class="">60%</span>
-                    </div>
-                  </div>
-                </li>
-                <li><h5>GITHUB</h5><br>
-                  <div class="progress">
-                    <div class="progress-bar progress-bar-striped active" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 60%">
-                      <span class="">60%</span>
-                    </div>
-                  </div>
-                </li>
-                <li><h5>LAMP/WAMP/XAMP</h5><br>
-                  <div class="progress">
-                    <div class="progress-bar progress-bar-striped active" role="progressbar" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100" style="width: 20%">
-                      <span class="">20%</span>
-                    </div>
-                  </div>
-                </li>
-                <li><h5>NODE JS</h5><br>
-                  <div class="progress">
-                    <div class="progress-bar progress-bar-striped active" role="progressbar" aria-valuenow="10" aria-valuemin="0" aria-valuemax="100" style="width: 10%">
-                      <span class="">10%</span>
-                    </div>
-                  </div>
-                </li>
-                <li><h5>PENCIL</h5><br>
-                  <div class="progress">
-                    <div class="progress-bar progress-bar-striped active" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100" style="width: 70%">
-                      <span class="">70%</span>
-                    </div>
-                  </div>
-                </li>
-                <li><h5>MASCHINE 2</h5><br>
-                  <div class="progress">
-                    <div class="progress-bar progress-bar-striped active" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 60%">
-                      <span class="">60%</span>
-                    </div>
-                  </div>
-                </li>
-                <li><h5>LOGIC PRO X</h5><br>
-                  <div class="progress">
-                    <div class="progress-bar progress-bar-striped active" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 60%">
-                      <span class="">60%</span>
-                    </div>
-                  </div>
-                </li>
-                <li><h5>GESTIONNAIRE DE DEPENDANCE</h5><br>
-                  <div class="progress">
-                    <div class="progress-bar progress-bar-striped active" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 60%">
-                      <span class="">60%</span>
-                    </div>
-                  </div>
-                </li>
-                <!--<li>VEILLE INFORMATIQUE<br>
-                  <div class="progress">
-                    <div class="progress-bar progress-bar-striped active" role="progressbar" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100" style="width: 20%">
-                      <span class="sr-only">20% Complete</span>
-                    </div>
-                  </div>
-                </li>-->
-              </ul>
-            </section>
-          </li>
-          <li class="col-lg-3 col-md-3 col-sm-6 col-xs-12 competence">
+          <li class="col-lg-4 col-md-4 col-sm-6 col-xs-12 competence">
             <section>
               <h3>Framework et Bibliothèque</h3>
               <ul>
@@ -251,6 +146,112 @@
                     </div>
                   </div>
                 </li>
+              </ul>
+            </section>
+          </li>
+          <li class="col-lg-12 col-md-12 col-sm-6 col-xs-12 competence outils_name">
+            <section>
+              <h3>Logiciels et Outils</h3>
+              <ul>
+                <li class="col-lg-3 col-lg-offset-1 col-md-3 col-md-offset-1"><h5 class="">LIGNE DE COMMANDE</h5><br>
+                  <div class="progress outils">
+                    <div class="progress-bar progress-bar-striped active" role="progressbar" aria-valuenow="30" aria-valuemin="0" aria-valuemax="100" style="width: 30%">
+                      <span class="">30%</span>
+                    </div>
+                  </div>
+                </li>
+                <li class="col-lg-3 col-lg-offset-1 col-md-3 col-md-offset-1"><h5>NANO</h5><br>
+                  <div class="progress outils">
+                    <div class="progress-bar progress-bar-striped active" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="width: 80%">
+                      <span class="">80%</span>
+                    </div>
+                  </div>
+                </li>
+                <li class="col-lg-3 col-lg-offset-1 col-md-3 col-md-offset-1"><h5>NOTEPAD ++</h5><br>
+                  <div class="progress outils">
+                    <div class="progress-bar progress-bar-striped active" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 60%">
+                      <span class="">60%</span>
+                    </div>
+                  </div>
+                </li>
+                <li class="col-lg-3 col-lg-offset-1 col-md-3 col-md-offset-1"><h5>ATOM</h5><br>
+                  <div class="progress outils">
+                    <div class="progress-bar progress-bar-striped active" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 60%">
+                      <span class="">60%</span>
+                    </div>
+                  </div>
+                </li>
+                <li class="col-lg-3 col-lg-offset-1 col-md-3 col-md-offset-1"><h5>NETBEANS</h5><br>
+                  <div class="progress outils">
+                    <div class="progress-bar progress-bar-striped active" role="progressbar" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100" style="width: 40%">
+                      <span class="">40%</span>
+                    </div>
+                  </div>
+                </li>
+                <li class="col-lg-3 col-lg-offset-1 col-md-3 col-md-offset-1"><h5>GIT</h5><br>
+                  <div class="progress outils">
+                    <div class="progress-bar progress-bar-striped active" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 60%">
+                      <span class="">60%</span>
+                    </div>
+                  </div>
+                </li>
+                <li class="col-lg-3 col-lg-offset-1 col-md-3 col-md-offset-1"><h5>GITHUB</h5><br>
+                  <div class="progress outils">
+                    <div class="progress-bar progress-bar-striped active" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 60%">
+                      <span class="">60%</span>
+                    </div>
+                  </div>
+                </li>
+                <li class="col-lg-3 col-lg-offset-1 col-md-3 col-md-offset-1"><h5>LAMP/WAMP/XAMP</h5><br>
+                  <div class="progress outils">
+                    <div class="progress-bar progress-bar-striped active" role="progressbar" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100" style="width: 20%">
+                      <span class="">20%</span>
+                    </div>
+                  </div>
+                </li>
+                <li class="col-lg-3 col-lg-offset-1 col-md-3 col-md-offset-1"><h5>NODE JS</h5><br>
+                  <div class="progress outils">
+                    <div class="progress-bar progress-bar-striped active" role="progressbar" aria-valuenow="10" aria-valuemin="0" aria-valuemax="100" style="width: 10%">
+                      <span class="">10%</span>
+                    </div>
+                  </div>
+                </li>
+                <li class="col-lg-3 col-lg-offset-1 col-md-3 col-md-offset-1"><h5>GESTIONNAIRE DE DEPENDANCE</h5><br>
+                  <div class="progress outils">
+                    <div class="progress-bar progress-bar-striped active" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 60%">
+                      <span class="">60%</span>
+                    </div>
+                  </div>
+                </li>
+                <li class="col-lg-3 col-lg-offset-1 col-md-3 col-md-offset-1"><h5>PENCIL</h5><br>
+                  <div class="progress outils">
+                    <div class="progress-bar progress-bar-striped active" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100" style="width: 70%">
+                      <span class="">70%</span>
+                    </div>
+                  </div>
+                </li>
+                <li class="col-lg-3 col-lg-offset-1 col-md-3 col-md-offset-1"><h5>MASCHINE 2</h5><br>
+                  <div class="progress outils">
+                    <div class="progress-bar progress-bar-striped active" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 60%">
+                      <span class="">60%</span>
+                    </div>
+                  </div>
+                </li>
+                <li class="col-lg-3 col-lg-offset-1 col-md-3 col-md-offset-1"><h5>LOGIC PRO X</h5><br>
+                  <div class="progress outils">
+                    <div class="progress-bar progress-bar-striped active" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 60%">
+                      <span class="">60%</span>
+                    </div>
+                  </div>
+                </li>
+
+                <!--<li>VEILLE INFORMATIQUE<br>
+                  <div class="progress">
+                    <div class="progress-bar progress-bar-striped active" role="progressbar" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100" style="width: 20%">
+                      <span class="sr-only">20% Complete</span>
+                    </div>
+                  </div>
+                </li>-->
               </ul>
             </section>
           </li>
