--- a/assets/partials/presentation.html
+++ b/assets/partials/presentation.html
@@ -6,7 +6,7 @@
           <div class="col-lg-4 col-lg-offset-4 comp_pers">
             <i class="fa  fa-2x faa-passing-reverse animated listComp_pers"> Persévérant</i>
             <i class="fa  fa-2x faa-ring animated listComp_pers"> Créatif</i><br>
-            <a href="https://www.16personalities.com/fr/la-personnalite-entp" target="_blank"><i class="fa  fa-2x faa-pulse animated listComp_pers" id="entp"> ENTP</i></a><br>
+            <i class="fa  fa-2x faa-pulse animated listComp_pers" id="entp"> Innovateur</i><br>
             <i class="fa  fa-2x faa-flash animated listComp_pers"> Adaptabilité</i>
             <i class="fa  fa-2x faa-passing animated listComp_pers"> Observateur</i><br>
           </div>
