--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -8,6 +8,7 @@ src: url('assets/librairie/glyphicons-halflings-regular.svg') format('svg');
 font-weight: normal;
 font-style: normal;
 }
+
 /*.container {
   padding-right: 0px;
   padding-left: 0px;
@@ -292,6 +293,25 @@ li:hover {
     border-left: solid #f0ad4e 1px ;
     border-collapse: collapse;
   }
+  .outils{
+    display: none;
+  }
+  .outils_name h5{
+    margin: 0;
+    padding: 2px;
+    text-align: center;
+    border: 2px outset white;
+    box-sizing: padding-box;
+    background-color: lightgreen;
+    border-radius: 5px;
+    opacity: 1;
+    margin-right: 10px;
+    box-shadow: 1px 2px 0px 1px lightgreen;
+  }
+  .outils_name li{
+    margin: 0;
+    padding: 0;
+  }
   .content_experience{
     margin-right: 150px;
     box-sizing: border-box;
@@ -389,6 +409,7 @@ li:hover {
     top: 30px;
     font-size: 10px;
   }
+
 }
      img {
       -moz-transition-duration:4.0s;
