--- a/assets/partials/competence.html
+++ b/assets/partials/competence.html
@@ -57,8 +57,8 @@
                   </li>
                   <li><h5>JAVA</h5> <br>
                     <div class="progress">
-                      <div class="progress-bar progress-bar-striped active" role="progressbar" aria-valuenow="5" aria-valuemin="0" aria-valuemax="100" style="width: 5%">
-                        <span class="">5%</span>
+                      <div class="progress-bar progress-bar-striped active" role="progressbar" aria-valuenow="15" aria-valuemin="0" aria-valuemax="100" style="width: 15%">
+                        <span class="">15%</span>
                       </div>
                     </div>
                   </li>
@@ -66,6 +66,13 @@
                     <div class="progress">
                       <div class="progress-bar progress-bar-striped active" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100" style="width: 70%">
                         <span class="">70%</span>
+                      </div>
+                    </div>
+                  </li>
+                  <li><h5>SQL</h5> <br>
+                    <div class="progress">
+                      <div class="progress-bar progress-bar-striped active" role="progressbar" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100" style="width: 50%">
+                        <span class="">50%</span>
                       </div>
                     </div>
                   </li>
@@ -203,6 +210,13 @@
                   </div>
                 </li>
                 <li class="col-lg-3 col-lg-offset-1 col-md-3 col-md-offset-1"><h5>LAMP/WAMP/XAMP</h5><br>
+                  <div class="progress outils">
+                    <div class="progress-bar progress-bar-striped active" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 60%">
+                      <span class="">60%</span>
+                    </div>
+                  </div>
+                </li>
+                <li class="col-lg-3 col-lg-offset-1 col-md-3 col-md-offset-1"><h5>MY SQL</h5><br>
                   <div class="progress outils">
                     <div class="progress-bar progress-bar-striped active" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 60%">
                       <span class="">60%</span>
