--- a/assets/partials/competence.html
+++ b/assets/partials/competence.html
@@ -76,27 +76,6 @@
                       </div>
                     </div>
                   </li>
-                  <li><h5>PYTHON</h5><br>
-                    <div class="progress">
-                      <div class="progress-bar progress-bar-striped active" role="progressbar" aria-valuenow="1" aria-valuemin="0" aria-valuemax="100" style="width: 1%">
-                        <span class="">1%</span>
-                      </div>
-                    </div>
-                  </li>
-                  <li><h5>RUBY</h5> <br>
-                    <div class="progress">
-                      <div class="progress-bar progress-bar-striped active" role="progressbar" aria-valuenow="1" aria-valuemin="0" aria-valuemax="100" style="width: 1%">
-                        <span class="">1%</span>
-                      </div>
-                    </div>
-                  </li>
-                  <!--<li>SQL <br>
-                    <div class="progress">
-                      <div class="progress-bar progress-bar-striped active" role="progressbar" aria-valuenow="1" aria-valuemin="0" aria-valuemax="100" style="width: 1%">
-                        <span class="sr-only">1% Complete</span>
-                      </div>
-                    </div>
-                  </li>-->
                 </ul>
               </section>
           </li>
@@ -132,24 +111,10 @@
                     </div>
                   </div>
                 </li>
-                <!--<li>AJAX<br>
+                <li>AJAX<br>
                   <div class="progress">
-                    <div class="progress-bar progress-bar-striped active" role="progressbar" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100" style="width: 20%">
-                      <span class="sr-only">20% Complete</span>
-                    </div>
-                  </div>
-                </li>-->
-                <li><h5>LARAVEL</h5><br>
-                  <div class="progress">
-                    <div class="progress-bar progress-bar-striped active" role="progressbar" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100" style="width: 0%">
-                      <span class="">0%</span>
-                    </div>
-                  </div>
-                </li>
-                <li><h5>DJANGO</h5><br>
-                  <div class="progress">
-                    <div class="progress-bar progress-bar-striped active" role="progressbar" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100" style="width: 0%">
-                      <span class="">0%</span>
+                    <div class="progress-bar progress-bar-striped active" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 60%">
+                      <span class="sr-only">60% Complete</span>
                     </div>
                   </div>
                 </li>
