--- a/assets/partials/experience.html
+++ b/assets/partials/experience.html
@@ -3,7 +3,7 @@
           <button class="btn btn-danger btn-lg danger" onclick="play('troll')" ><span class="glyphicon glyphicon-ban-circle"> Expériences</span></button><br>
           <h3 class="col-lg-12 col-md-12 col-sm-12 col-xs-12">Diplome / Certification</h3>
           <ul>
-            <li class="col-lg-12 col-md-12 col-sm-12 col-xs-12"><i class="fa fa-spinner faa-spin animated"></i> 2017: Préparation du Titre Pro : Développeur Logiciel à E2N - Titre de Niveau III / équivalent bac +2
+            <li class="col-lg-12 col-md-12 col-sm-12 col-xs-12"><i class="fa fa-spinner faa-spin animated"></i> 2017: Obtention du Titre Pro : Développeur Logiciel à E2N - Titre de Niveau III / équivalent bac +2
             <span>Formation Intensive de 35h/ semaine pendant 6 mois au metier Développeur Web</span></li>
             <li class="col-lg-12 col-md-12 col-sm-12 col-xs-12">2011 : Baccalaureat Scientifique</li>
           </ul>
